Fix tab-tooltip z-index from navbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,7 @@ html,body{
 .navbar {
   background-image: -webkit-gradient(linear,left 0,left 100%,from($dark-color-gradient),to($dark-color));
   background-image: linear-gradient(to bottom,#7191a1 0,$dark-color 100%);
+  z-index: 200;
 }
 
 //navigation bar font-color
